@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Tue Jul 26 2016 Sjoerd Mullender <sjoerd@acm.org>
+- BATattach now copies the input file instead of "stealing" it.
 - Removed the lastused "timestamp" from the BBP.
 - Removed batStamp field from BAT descriptor, and removed the BBPcurstamp
   function.
